k8s/django-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  type: NodePort
  selector:
    service: django
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: django
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: django
    spec:
      containers:
      - name: django
        image: eu.gcr.io/wildfish-gckb-example/gckb-example
        ports:
        - containerPort: 8000
